--- a/index.html
+++ b/index.html
@@ -3,40 +3,35 @@
 <head>
 	<meta charset="utf-8">
     <title>Morgan Charlery</title>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
+    <link href="css/dist/css/bootstrap.css" rel="stylesheet"/>
+	<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
     <meta author="Valentin Pastout">
     <meta charset="utf-8">
     <meta name="description" content="Je suis un jeune artiste ayant travaillé pour plusieur commune. Je fais des oeuvre murale "/>
     <meta name="keywords" content="art, peinture, inspiration, mural, portrait, abstrait, coloré, indépendant, auto-entrepreneur, exposition, artiste, artistique, Morgan Charlery"/>
 </head>
-<nav class="header">
-	 <ul> 
-		<!--<img class="Logo" src="media/IMG_4692-300x205.jpg" alt=""/>-->
-		<li><a class="active" href="index.html" title="titre">Acceuil</a></li> 
-      	<li><a class="navigation-lien" href="pages/Mural.html" title="titre">Mural</a></li> 
-      	<li><a class="navigation-lien" href="pages/Canvas.html" title="titre">Canvas</a></li> 
-		<li><a class="navigation-lien" href="pages/Partenariat.html" title="titre">Partenariats</a></li> 
-     	<li><a class="navigation-lien" href="pages/Bio.html" title="titre">Bio</a></li> 
-		<li><a class="navigation-lien" href="pages/Contact.html" title="titre">Contact</a></li>
-  	 </ul> 
+<nav class="navbar navbar-expand-md-1 navbar-dark bg-dark">
+		<a href="#" class="navbar-brand"><img width="40" src="media/IMG_4692-300x205.jpg"></a>
+		<button class="navbar-toggler" data-toggle="collapse" data-target="#menuhamburger">
+			<span class="navbar-toggler-icon"></span>
+		 </button>
+ 			<div class="collapse navbar-collapse" id="menuhamburger">
+ 				<ul class="navbar-nav m-auto">
+ 					<li class="nav-item active">
+ 						<a href="#" class="nav-link">Accueil</a>
+ 					</li>
+ 					<li class="nav-item">
+ 						<a href="#" class="nav-link">A propos</a>
+ 					</li>
+					<li class="nav-item">
+ 						<a href="#" class="nav-link">Contact</a>
+ 					</li>
+ 				</ul>
+ 			</div>
 </nav>
 
 <body>
-<div class="col-titre">
-  <h1>Page d'acceuil</h1>
-  <p>Resize this responsive page to see the effect!</p> 
-</div>
-  
-<div class="container">
-  <div class="row">
-    <article class="col-article">
-      <h3 class="TitrePreface">Article 1</h3>
-	  <img class="Image" src="media/Republiquezoom2-300x300.jpg" alt="">
-      <p class="Preface">Victoriam dispendium etiam ita solet eius tener factum aut salutis luctuosam et quassari fecit victoriam existimans animus solet angustus tener etiam ad quassari solet angustus ad etiam corpus corpus solet offensis levibus et existimans angustus suae cogitatum aegrum et factum et luctuosam salutis levibus solet existimans et insontium aegrum quassari eius aegrum corpus fecit animus aut et etiam fecit insontium factum corpus solet increpuisset suae existimans caedibus corpus increpuisset quicquid aut et eius quicquid ad offensis eius increpuisset tener suae angustus factum etiam quassari tener levibus ad aut corpus tener increpuisset animus cogitatum factum ad animus existimans quassari aut quassari.<br/><br/>
-	<a href="liens" class="BoutonPreface">En savoir plus</a></p>
-	<p class="Description">Ad cuncta plus generalibus diutius insperatos minimis tractibus per bella post tractibus cuncta quam exitium.</p>
-    </article>
-</div>
-</div>
+
+
 </body>
 </html>
